# RuSStly

./: Cargo.toml  README.md  build.sh
.github/workflows/: ci.yml  publish-to-apt.yml  release.yml
res/: russtly.desktop
src/: app.rs  db.rs  download.rs  feed.rs  icon.rs  main.rs  mtp.rs  opml.rs  playback.rs  sync.rs  types.rs
