[package]
name = "russtly"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rss = "2"
rodio = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
log = "0.4"
simplelog = "0.12"
