[package]
name = "russtly"
version = "0.1.0"
edition = "2021"
description = "A native podcast client built with Rust and egui"
authors = ["cybernatedev"]
license = "MIT"

[package.metadata.deb]
maintainer = "cybernatedev"
depends = "$auto"
section = "sound"
desktop = "res/russtly.desktop"
icon = "res/icon-256.png"
assets = [
  ["res/icon-256.png", "/usr/share/icons/hicolor/256x256/apps/russtly.png", "644"],
  ["res/icon.png", "/usr/share/icons/hicolor/64x64/apps/russtly.png", "644"],
]

[package.metadata.wix]


[dependencies]
eframe = "0.27"
egui = "0.27"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rss = "2"
rodio = "0.19"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
notify-rust = "4"
tray-icon = "0.18"
image = "0.24"
mtp-rs = "0.23"
tokio-util = "0.7"
futures = "0.3"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
gtk = "0.18"

